# leven-search

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yaml
src/: leven_search.py  result.py  state.py  trie.py
src/leven_search/: __init__.py  config.py  cost.py  leven_search.py  result.py  state.py
test/: edit_cost_test.py  helpers.py  lev_dict_test.py
